# glyphspack

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: pypi.yml  release.yml
src/: lib.rs  main.rs  pack.rs  plist.rs  unpack.rs
tests/: integration.rs
tests/fixtures/: Andika Mini.glyphs
tests/fixtures/Andika Mini.glyphspackage/: UIState.plist  fontinfo.plist  order.plist
tests/fixtures/Andika Mini.glyphspackage/glyphs/: A_.glyph  B_.glyph  C_.glyph  D_.glyph  E_.glyph  F_.glyph  G_.glyph  H_.glyph  I_.glyph  J_.glyph  K_.glyph  L_.glyph  M_.glyph  N_.glyph  O_.glyph  P_.glyph  Q_.glyph  R_.glyph  S_.glyph  T_.glyph  U_.glyph  V_.glyph  W_.glyph  X_.glyph  Y_.glyph  Z_.glyph  a.glyph  b.glyph  c.glyph  d.glyph  e.glyph  eight.glyph  f.glyph  five.glyph  four.glyph  g.glyph  h.glyph  i.glyph  j.glyph  k.glyph  (+23 more)
