[package]
name = "glyphspack"
version = "2.0.0"
authors = ["Florian Pircher <florian@formkunft.com>"]
edition = "2024"
rust-version = "1.85"
description = "Convert between .glyphs and .glyphspackage files."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
pest = "2.8"
pest_derive = "2.8"
rayon = "1.11"
regex = "1.12"

[dependencies.clap]
version = "4"
features = ["wrap_help"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
